--- a/sentry-turret-app/src/assets/css/style.css
+++ b/sentry-turret-app/src/assets/css/style.css
@@ -1,6 +1,7 @@
+@font-face { font-family: Norwester; src: url('norwester.otf'); } 
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Norwester', sans-serif;
     font-size: 16px;
     font-weight: 300;
     color: #888;
