--- a/sentry-turret-app/src/assets/css/style.css
+++ b/sentry-turret-app/src/assets/css/style.css
@@ -1,4 +1,5 @@
 @font-face { font-family: Norwester; src: url('norwester.otf'); } 
+@font-face { font-family: WorkSans; src: url('WorkSans-Regular.otf'); } 
 
 body {
     font-family: 'Norwester', sans-serif;
