--- a/sentry-turret-app/src/assets/css/style.css
+++ b/sentry-turret-app/src/assets/css/style.css
@@ -548,3 +548,16 @@ footer {
     width: 100%;
     height: 100%;
 }
+
+.btn_container {
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
