--- a/sentry-turret-app/src/assets/css/style.css
+++ b/sentry-turret-app/src/assets/css/style.css
@@ -17,21 +17,22 @@ a, a:hover, a:focus { color: #9b59b6; text-decoration: none; transition: all .3s
 h1 {
 	margin-top: 30px;
 	font-family: 'Norwester', sans-serif;
-	font-weight: 600;
-    color: #B8E986;
+	font-weight:normal;
+	color: #B8E986;
+	font-size: 3rem;
 }
 
 h2 {
 	margin-top: 10px;
 	font-family: 'Norwester', sans-serif;
-	font-weight: 300;
+	font-weight:normal;
     color: rgb(255, 255, 255);
 }
 
 h3 {
 	font-family: 'Norwester', sans-serif;
 	font-size: 22px;
-    font-weight: 300;
+    font-weight:normal;
 	color: rgb(255, 255, 255);
     line-height: 30px;
 }
